# services-i18n

./: .gitlab-ci.yml  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/: i18n.py
nagare/admin/: i18n.py
nagare/services/: i18n.py  locale.py
src/nagare/: i18n.py
src/nagare/admin/: i18n.py
src/nagare/services/: i18n.py  locale.py
tests/: messages.pot  test.cfg  test_contexts.py  test_date_names.py  test_datetime.py  test_formats.py  test_languages.py  test_list.py  test_numbers_and_currencies.py  test_parsing.py  test_timezones.py  test_translations.py
tests/locale/fr/LC_MESSAGES/: messages.mo  messages.po
