[metadata]
name = nagare-services-i18n
author = Net-ng
author_email = alain.poirier@net-ng.com
description = i18n service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-i18n
    Tracker = https://github.com/nagareproject/services-i18n/issues

[options]
zip_safe = False
packages = find:
install_requires =
    Babel>=2.5.0
    pytz
    nagare-services
    nagare-server

[options.entry_points]
nagare.commands =
    i18n = nagare.admin.i18n:Commands

nagare.commands.i18n =
    locales = nagare.admin.i18n:Locales
    extract = nagare.admin.i18n:Extract
    init = nagare.admin.i18n:Init
    update = nagare.admin.i18n:Update
    compile = nagare.admin.i18n:Compile

nagare.services =
    i18n = nagare.services.i18n:I18NService

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
